--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,13 @@ sourceCompatibility = '17'
 
 repositories {
 	mavenCentral()
+	maven { url 'https://jitpack.io' }
 }
 
 dependencies {
+	implementation("io.ktor:ktor-client-core:2.2.3")
+	implementation("io.ktor:ktor-client-cio:2.2.3")
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
